[package]
name = "typst-preview"
version = "0.10.6"
authors = ["The Typst Project Developers"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "typst-preview"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
typst = "0.10.0"
# typst-library = "0.10.0"
typst-ts-svg-exporter = "0.4.2-rc5"
typst-ts-core = { version = "0.4.2-rc5", default-features = false, features = [
  "flat-vector",
  "vector-bbox",
  "no-content-hint",
] }
typst-ts-compiler = "0.4.2-rc5"

chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
codespan-reporting = "0.11"
comemo = "0.3"
dirs = "5"
elsa = "1.7"
memmap2 = "0.7"
notify = "6"
once_cell = "1"
same-file = "1"
siphasher = "1"
walkdir = "2"
clap = { version = "4.2.4", features = ["derive", "env"] }
open = "5.0.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tiny-skia = "0.11"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.95"
futures = "0.3.28"
# https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
# <= 1.0.171 due to serde-rs/serde#2538
serde = "1.0.188"
hyper = { version = "0.14", features = ["full"] }


[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-half" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-half" }
typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "8c6e9a41b3a65a631afd5812e43afba38c40bf11", package = "typst-ts-svg-exporter" }
typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "8c6e9a41b3a65a631afd5812e43afba38c40bf11", package = "typst-ts-core" }
typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "8c6e9a41b3a65a631afd5812e43afba38c40bf11", package = "typst-ts-compiler" }

# typst = { path = "../../rust/typst/crates/typst" }
# typst-library = { path = "../../rust/typst/crates/typst-library" }
# typst-syntax = { path = "../../rust/typst/crates/typst-syntax" }
# hayagriva = { path = "../../rust/hayagriva" }
# typst-ts-svg-exporter = { path = "../../exporter/svg" }
# typst-ts-compiler = { path = "../../compiler" }
# typst-ts-core = { path = "../../core" }

[build-dependencies]
clap = { version = "4.2.1", features = ["derive", "string"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"
vergen = { version = "8.2.5", features = [
  "build",
  "cargo",
  "git",
  "git2",
  "rustc",
] }
anyhow = "1.0.75"
[features]
default = ["embed-fonts"]

# Embeds Typst's default fonts for
# - text (Linux Libertine),
# - math (New Computer Modern Math), and
# - code (Deja Vu Sans Mono)
# and additionally New Computer Modern for text
# into the binary.
embed-fonts = []

[profile.rel_dev]
inherits = "release"
debug = true
opt-level = 3
