[package]
name = "typst-preview"
version = "0.10.7"
authors = ["The Typst Project Developers"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "typst-preview"
required-features = ["cli"]
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
typst = "0.10.0"
# typst-library = "0.10.0"

typst-ts-svg-exporter = "0.4.2-rc6"
typst-ts-core = { version = "0.4.2-rc6", default-features = false, features = [
  "flat-vector",
  "vector-bbox",
] }
comemo = "0.3"
elsa = "1.7"
memmap2 = "0.9.2"
notify = "6"
once_cell = "1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tiny-skia = "0.11"
env_logger = "0.11.1"
log = "0.4.17"
serde_json = "1.0.95"
futures = "0.3.28"
indexmap = "2"
# https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
# <= 1.0.171 due to serde-rs/serde#2538
serde = "1.0.188"
await-tree = "0.1.2"

typst-ts-compiler = { version = "0.4.2-rc6", optional = true }
clap = { version = "4.2.4", features = ["derive", "env"], optional = true }
open = { version = "5.0.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-half" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-half" }
typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "98e3d3a42877b195f87223060882d55fd5aaa04a", package = "typst-ts-svg-exporter" }
typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "98e3d3a42877b195f87223060882d55fd5aaa04a", package = "typst-ts-core" }
typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "98e3d3a42877b195f87223060882d55fd5aaa04a", package = "typst-ts-compiler" }

# typst = { path = "../../../typst/crates/typst" }
# typst-syntax = { path = "../../../typst/crates/typst-syntax" }
# hayagriva = { path = "../../rust/hayagriva" }
# typst-ts-svg-exporter = { path = "../../exporter/svg" }
# typst-ts-compiler = { path = "../../compiler" }
# typst-ts-core = { path = "../../core" }

[build-dependencies]
clap = { version = "4.2.1", features = ["derive", "string"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"
vergen = { version = "8.2.5", features = [
  "build",
  "cargo",
  "git",
  "git2",
  "rustc",
] }
anyhow = "1.0.75"

[features]

default = ["embed-fonts", "cli"]

# Embeds Typst's default fonts for
# - text (Linux Libertine),
# - math (New Computer Modern Math), and
# - code (Deja Vu Sans Mono)
# and additionally New Computer Modern for text
# into the binary.
embed-fonts = []
# Disable the default content hint.
# This requires modifying typst.
no-content-hint = ["typst-ts-core/no-content-hint"]

cli = ["hyper", "clap", "open", "typst-ts-compiler", "no-content-hint"]

[profile.release]
debug = true
