[package]
name = "typst-preview"
version = "0.11.0-rc1"
authors = ["The Typst Project Developers"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "typst-preview"
required-features = ["cli"]
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
typst = "0.10.0"
# typst-library = "0.10.0"
typst-assets = { git = "https://github.com/typst/typst-assets", tag = "v0.11.0-rc1" }
typst-ts-svg-exporter = { version = "0.4.2-rc7" }
typst-ts-core = { version = "0.4.2-rc7", default-features = false, features = [
  "flat-vector",
  "vector-bbox",
] }
comemo = "0.4"
elsa = "1.10"
memmap2 = "0.9.4"
notify = "6"
once_cell = "1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tiny-skia = "0.11"
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.114"
futures = "0.3.30"
indexmap = "2"
serde = "1.0.197"
await-tree = "0.1.2"

typst-ts-compiler = { version = "0.4.2-rc7", optional = true }
clap = { version = "4.5.2", features = ["derive", "env"], optional = true }
open = { version = "5.1.2", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0" }
typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58c2c6b07831cffb8915776c45058754c505033b", package = "typst-ts-svg-exporter" }
typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58c2c6b07831cffb8915776c45058754c505033b", package = "typst-ts-core" }
typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58c2c6b07831cffb8915776c45058754c505033b", package = "typst-ts-compiler" }

# typst = { path = "../../../typst/crates/typst" }
# typst-syntax = { path = "../../../typst/crates/typst-syntax" }
# hayagriva = { path = "../../rust/hayagriva" }
# typst-ts-svg-exporter = { path = "../../exporter/svg" }
# typst-ts-compiler = { path = "../../compiler" }
# typst-ts-core = { path = "../../core" }

[build-dependencies]
clap = { version = "4.5.2", features = ["derive", "string"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "git2",
  "rustc",
] }
anyhow = "1.0.80"

[features]

default = ["embed-fonts", "cli"]

# Embeds Typst's default fonts for
# - text (Linux Libertine),
# - math (New Computer Modern Math), and
# - code (Deja Vu Sans Mono)
# and additionally New Computer Modern for text
# into the binary.
embed-fonts = ["typst-assets/fonts"]
# Disable the default content hint.
# This requires modifying typst.
no-content-hint = ["typst-ts-core/no-content-hint"]

cli = ["hyper", "clap", "open", "typst-ts-compiler", "no-content-hint"]

[profile.release]
debug = true
